--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:custom": "tsc -b && vite build",
     "build:root": "VITE_BASE_PATH=/ tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy-gh-pages": "pnpm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^4.0.0",
@@ -51,6 +52,7 @@
     "tw-animate-css": "^1.3.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "gh-pages": "^6.1.1"
   }
 }
