--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:root": "VITE_BASE_PATH=/ tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "deploy-gh-pages": "pnpm run build && gh-pages -d dist"
+    "deploy-gh-pages": "pnpm run build && gh-pages -d dist",
+    "generate-api": "orval --config ./orval.config.ts"
   },
   "dependencies": {
     "@aptos-labs/ts-sdk": "^4.0.0",
@@ -26,7 +27,9 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-query": "^5.90.12",
     "aptos": "^1.21.0",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
@@ -48,11 +51,12 @@
     "eslint": "^9.33.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "gh-pages": "^6.1.1",
     "globals": "^16.3.0",
+    "orval": "^7.17.0",
     "tw-animate-css": "^1.3.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2",
-    "gh-pages": "^6.1.1"
+    "vite": "^7.1.2"
   }
 }
